--- a/ArchipelagoOuterWildsMod/ArchipelagoOuterWildsMod.csproj
+++ b/ArchipelagoOuterWildsMod/ArchipelagoOuterWildsMod.csproj
@@ -16,8 +16,8 @@
     <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="OWML" Version="2.1.0" />
-    <PackageReference Include="OuterWildsGameLibs" Version="1.1.11.73" />
+    <PackageReference Include="OWML" Version="2.3.2" />
+    <PackageReference Include="OuterWildsGameLibs" Version="1.1.12.168" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default-config.json">
@@ -28,6 +28,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModTemplate.csproj.user" />
+    <Content Include="ArchipelagoOuterWildsMod.csproj.user" />
   </ItemGroup>
 </Project>
